--- a/style.css
+++ b/style.css
@@ -51,7 +51,9 @@ opacity: 0.9;
 /* ---------- WORD BOXES ---------- */
 
 #words {
-margin-bottom: 12px;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 12px;
 }
 
 .word {
@@ -73,7 +75,7 @@ border-radius: 6px;
 
 #canvas {
 position: relative;
-z-index: 0;
+z-index: 10;
 height: 350px;
 border: 2px dashed #aaa;
 border-radius: 8px;
@@ -115,5 +117,6 @@ color: #fff;
 .letter.locked {
 outline: 3px solid gold;
 }
+
 
 
