--- a/style_v3.css
+++ b/style_v3.css
@@ -66,17 +66,12 @@ z-index: 1; /* ensure letters appear above */
 /* ==== Letters ==== */
 .letter {
 position: absolute;
-width: 50px;
-height: 50px;
-line-height: 50px;
-text-align: center;
-font-weight: 900;
-font-size: 24px;
 text-transform: uppercase;
 border-radius: 6px;
 background-color: #ccc;
 cursor: grab;
 user-select: none;
+touch-action: none;
 z-index: 10;
 }
 
@@ -98,3 +93,4 @@ pointer-events: none;
  
 
 	
+
